<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="data"
            type="kr.ac.konkuk.gdsc.hyeseon.domain.entity.Img" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.mypage.MyPageFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_mypage_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="35dp"
                android:src="@drawable/ic_mypage_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_mypage_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="25dp"
                android:text="@string/mypage_title"
                android:textAppearance="@style/TextAppearance.GDSC.Headline_b_20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_mypage_back_button" />

            <ImageView
                android:id="@+id/iv_mypage_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="35dp"
                imageUrl="@{data.url}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_mypage_title" />

            <TextView
                android:id="@+id/tv_mypage_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="47dp"
                android:text="@string/mypage_name"
                android:textAppearance="@style/TextAppearance.GDSC.Content_m_20"
                app:layout_constraintStart_toEndOf="@id/iv_mypage_profile"
                app:layout_constraintTop_toBottomOf="@id/tv_mypage_title" />

            <TextView
                android:id="@+id/tv_mypage_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="27dp"
                android:layout_marginTop="8dp"
                android:text="@string/mypage_email"
                android:textAppearance="@style/TextAppearance.GDSC.Content_m_15"
                android:textColor="@color/gray_400"
                app:layout_constraintStart_toEndOf="@id/iv_mypage_profile"
                app:layout_constraintTop_toBottomOf="@id/tv_mypage_name" />

            <TextView
                android:id="@+id/tv_mypage_todo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="23dp"
                android:layout_marginTop="29dp"
                android:text="@string/mypage_todo_title"
                android:textAppearance="@style/TextAppearance.GDSC.Headline_b_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_mypage_profile" />

            <include
                android:id="@+id/layout_mypage_todo"
                layout="@layout/layout_mypage_todo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_mypage_todo_title" />

            <TextView
                android:id="@+id/tv_mypage_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="30dp"
                android:text="@string/mypage_notification"
                android:textAppearance="@style/TextAppearance.GDSC.Content_m_15"
                android:textColor="@color/gray_600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_mypage_todo" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="27dp"
                android:src="@drawable/iv_mypage_go"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_mypage_todo" />

            <View
                android:id="@+id/v_seperator_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="17dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_300"
                app:layout_constraintTop_toBottomOf="@id/tv_mypage_notification" />

            <TextView
                android:id="@+id/tv_mypage_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="16dp"
                android:text="@string/mypage_edit"
                android:textAppearance="@style/TextAppearance.GDSC.Content_m_15"
                android:textColor="@color/gray_600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_seperator_1" />

            <ImageView
                android:id="@+id/iv_mypage_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="17dp"
                android:padding="10dp"
                android:src="@drawable/iv_mypage_go"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_seperator_1" />

            <View
                android:id="@+id/v_seperator_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="17dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_300"
                app:layout_constraintTop_toBottomOf="@id/tv_mypage_edit" />

            <TextView
                android:id="@+id/tv_mypage_notice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="16dp"
                android:text="@string/mypage_notice"
                android:textAppearance="@style/TextAppearance.GDSC.Content_m_15"
                android:textColor="@color/gray_600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_seperator_2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="27dp"
                android:src="@drawable/iv_mypage_go"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_seperator_2" />

            <TextView
                android:id="@+id/tv_mypage_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="56dp"
                android:text="@string/mypage_version"
                android:textAppearance="@style/TextAppearance.GDSC.Headline_b_15"
                android:textColor="@color/gray_900"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_mypage_notice" />

            <TextView
                android:id="@+id/tv_mypage_version_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="32dp"
                android:text="@string/mypage_version_code"
                android:textAppearance="@style/TextAppearance.GDSC.Headline_b_15"
                android:textColor="@color/gray_900"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_mypage_notice" />

            <View
                android:id="@+id/v_seperator_3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="17dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_300"
                app:layout_constraintTop_toBottomOf="@id/tv_mypage_version" />


            <TextView
                android:id="@+id/tv_mypage_signout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="16dp"
                android:text="@string/mypage_signout"
                android:textAppearance="@style/TextAppearance.GDSC.Content_m_15"
                android:textColor="@color/gray_600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_seperator_3" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="27dp"
                android:src="@drawable/iv_mypage_go"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_seperator_3" />

            <View
                android:id="@+id/v_seperator_4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="17dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_300"
                app:layout_constraintTop_toBottomOf="@id/tv_mypage_signout" />

            <TextView
                android:id="@+id/tv_mypage_withdrawl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="16dp"
                android:text="@string/mypage_withdrawl"
                android:textAppearance="@style/TextAppearance.GDSC.Content_m_15"
                android:textColor="@color/gray_600"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_seperator_4" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="27dp"
                android:src="@drawable/iv_mypage_go"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_seperator_4" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>